fixed spacing

--- a/src/idsk/components/intro-block/intro-block.scss
+++ b/src/idsk/components/intro-block/intro-block.scss
@@ -55,7 +55,7 @@
     }
 
     .idsk-search-component{
-      margin-bottom: 30px;
+      margin-bottom: 50px;
       @include mq($from: desktop) {
         margin-top: 50px;
       }
